add input system

--- a/Pe2/Runtime/CMakeLists.txt
+++ b/Pe2/Runtime/CMakeLists.txt
@@ -1,3 +1,5 @@
-file(GLOB SRC "*.h" "*.cpp")
+file(GLOB ROOT "*.h" "*.cpp")
+file(GLOB MATH "Math/*.h" "Math/*.cpp")
+file(GLOB SYSTEM "System/*.h" "System/*.cpp")
 
-add_library(Pe2 STATIC ${SRC})
+add_library(Pe2 STATIC ${ROOT} ${MATH} ${SYSTEM})
