--- a/Pe2/Runtime/CMakeLists.txt
+++ b/Pe2/Runtime/CMakeLists.txt
@@ -16,10 +16,11 @@ file(GLOB COMPONENT "Scene/Component/*.h" "Scene/Component/*.cpp")
 file(GLOB VULKAN "Graphics/RHI/VK/*.h" "Graphics/RHI/VK/*.cpp")
 file(GLOB OPENGL "Graphics/RHI/GL/*.h" "Graphics/RHI/GL/*.cpp")
 file(GLOB RHI "Graphics/RHI/*.h" "Graphics/RHI/*.cpp")
+file(GLOB UTILS "Usilt/*.h" "Utils/*.cpp")
 
 find_package(SDL2 CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
-add_library(Pe2 STATIC ${ROOT} ${MATH} ${GEOMETRY} ${SYSTEM} ${SCENE} ${VULKAN} ${OPENGL} ${RHI})
+add_library(Pe2 STATIC ${ROOT} ${MATH} ${GEOMETRY} ${SYSTEM} ${SCENE} ${VULKAN} ${OPENGL} ${RHI} ${UTILS})
 target_include_directories(Pe2 PRIVATE ${VULKAN_INCLUDE_DIR})
 target_link_libraries(Pe2 PRIVATE ${VULKAN_LIB_DIR}/vulkan-1.lib SDL2::SDL2 SDL2::SDL2main spdlog::spdlog spdlog::spdlog_header_only glad::glad)
