--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,5 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_EXTENSIONS off)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_subdirectory(${CMAKE_SOURCE_DIR}/Pe2/Runtime)
-add_subdirectory(${CMAKE_SOURCE_DIR}/Pe2/Editor)
-add_subdirectory(${CMAKE_SOURCE_DIR}/Tests/Runtime)
-add_subdirectory(${CMAKE_SOURCE_DIR}/Tests/Editor)
+add_subdirectory(${CMAKE_SOURCE_DIR}/libPe2)
+add_subdirectory(${CMAKE_SOURCE_DIR}/Tests/Sprite)
