--- a/Tests/Sprite/CMakeLists.txt
+++ b/Tests/Sprite/CMakeLists.txt
@@ -3,6 +3,8 @@ find_package(SDL2 CONFIG REQUIRED)
 find_package(sdl2-ttf CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
+find_package(glm CONFIG REQUIRED)
 add_executable(Sprite Sprite.cpp)
 target_include_directories(Sprite PRIVATE ${CMAKE_SOURCE_DIR})
-target_link_libraries( Sprite PRIVATE libPe2 SDL2::SDL2 SDL2::SDL2main spdlog::spdlog spdlog::spdlog_header_only glad::glad SDL2::SDL2_ttf)
+target_link_libraries( Sprite PRIVATE  glm::glm libPe2 SDL2::SDL2 SDL2::SDL2main spdlog::spdlog spdlog::spdlog_header_only glad::glad SDL2::SDL2_ttf)
+target_compile_definitions(Sprite PRIVATE RESOURCES_DIR="${CMAKE_SOURCE_DIR}/Tests/Sprite/")
