--- a/libPe2/CMakeLists.txt
+++ b/libPe2/CMakeLists.txt
@@ -6,7 +6,6 @@ file(GLOB COMPONENT "Scene/Component/*.h" "Scene/Component/*.cpp")
 file(GLOB RENDER "Render/*.h" "Render/*.cpp")
 file(GLOB UTILS "Utils/*.h" "Utils/*.cpp")
 file(GLOB BASE "Base/*.h" "Base/*.cpp")
-file(GLOB AUDIO "Audio/*.h" "Audio/*.cpp")
 file(GLOB INPUT "Input/*.h" "Input/*.cpp")
 
 find_package(SDL2 CONFIG REQUIRED)
@@ -14,7 +13,7 @@ find_package(sdl2-ttf CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
-add_library(libPe2 STATIC ${ROOT} ${MATH} ${GEOMETRY} ${SCENE} ${COMPONENT} ${RENDER} ${UTILS} ${BASE} ${AUDIO} ${INPUT})
+add_library(libPe2 STATIC ${ROOT} ${MATH} ${GEOMETRY} ${SCENE} ${COMPONENT} ${RENDER} ${UTILS} ${BASE} ${INPUT})
 target_include_directories(libPe2 PRIVATE ${CMAKE_SOURCE_DIR}/libPe2 
                                           ${CMAKE_SOURCE_DIR}/libPe2/Audio 
                                           ${CMAKE_SOURCE_DIR}/libPe2/Base 
