add moving texture to Asteroid example and add some interface to entity

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,9 @@
         "xstddef": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "cfenv": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     }
 }
