--- a/Tests/Asteroid/CMakeLists.txt
+++ b/Tests/Asteroid/CMakeLists.txt
@@ -8,4 +8,4 @@ file(GLOB SRC "*.h" "*.cpp")
 add_executable(Asteroid ${SRC})
 target_include_directories(Asteroid PRIVATE ${CMAKE_SOURCE_DIR})
 target_link_libraries( Asteroid PRIVATE  glm::glm libPe2 SDL2::SDL2 SDL2::SDL2main spdlog::spdlog spdlog::spdlog_header_only glad::glad SDL2::SDL2_ttf)
-target_compile_definitions(Asteroid PRIVATE RESOURCES_DIR="${CMAKE_SOURCE_DIR}/Tests/Asteroid/Assets/")
+target_compile_definitions(Asteroid PRIVATE RESOURCES_DIR="${CMAKE_SOURCE_DIR}/Tests/Assets/")
