Add RenderComponent and RenderMaterial

--- a/libmulberry/CMakeLists.txt
+++ b/libmulberry/CMakeLists.txt
@@ -8,7 +8,7 @@ file(GLOB GL "Graphics/GL/*.h" "Graphics/GL/*.cpp")
 file(GLOB INPUT "Input/*.h" "Input/*.cpp")
 
 find_package(SDL2 CONFIG REQUIRED)
-find_package(sdl2-ttf CONFIG REQUIRED)
+find_package(SDL2_ttf CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
@@ -17,6 +17,7 @@ target_include_directories(libmulberry PRIVATE ${CMAKE_SOURCE_DIR}/libmulberry
                                           ${CMAKE_SOURCE_DIR}/libmulberry/Input
                                           ${CMAKE_SOURCE_DIR}/libmulberry/Math
                                           ${CMAKE_SOURCE_DIR}/libmulberry/Graphics
+                                          ${CMAKE_SOURCE_DIR}/libmulberry/Graphics/GL
                                           ${CMAKE_SOURCE_DIR}/libmulberry/Scene/Component
                                           ${CMAKE_SOURCE_DIR}/libmulberry/Scene)
-target_link_libraries(libmulberry PRIVATE  glm::glm SDL2::SDL2 SDL2::SDL2main spdlog::spdlog spdlog::spdlog_header_only glad::glad SDL2::SDL2_ttf)
+target_link_libraries(libmulberry PRIVATE  glm::glm SDL2::SDL2 SDL2::SDL2main spdlog::spdlog spdlog::spdlog_header_only glad::glad SDL2_ttf::SDL2_ttf)
