--- a/Tests/Asteroid/CMakeLists.txt
+++ b/Tests/Asteroid/CMakeLists.txt
@@ -1,11 +1,11 @@
 
 find_package(SDL2 CONFIG REQUIRED)
-find_package(sdl2-ttf CONFIG REQUIRED)
+find_package(sdl2_ttf CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 file(GLOB SRC "*.h" "*.cpp")
 add_executable(Asteroid ${SRC})
 target_include_directories(Asteroid PRIVATE ${CMAKE_SOURCE_DIR})
-target_link_libraries( Asteroid PRIVATE  glm::glm libmulberry SDL2::SDL2 SDL2::SDL2main spdlog::spdlog spdlog::spdlog_header_only glad::glad SDL2::SDL2_ttf)
+target_link_libraries( Asteroid PRIVATE  glm::glm libmulberry SDL2::SDL2 SDL2::SDL2main spdlog::spdlog spdlog::spdlog_header_only glad::glad SDL2_ttf::SDL2_ttf)
 target_compile_definitions(Asteroid PRIVATE RESOURCES_DIR="${CMAKE_SOURCE_DIR}/Tests/Assets/")
