--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,6 +87,14 @@
         "xtree": "cpp",
         "cfenv": "cpp",
         "queue": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "numbers": "cpp",
+        "ranges": "cpp",
+        "semaphore": "cpp",
+        "span": "cpp",
+        "*.tcc": "cpp",
+        "memory_resource": "cpp",
+        "string_view": "cpp",
+        "cinttypes": "cpp"
     }
 }
