rename SDLWrapper as SDL2 and rename third party platform as XXXImpl

--- a/libmulberry/CMakeLists.txt
+++ b/libmulberry/CMakeLists.txt
@@ -6,7 +6,7 @@ file(GLOB ROOT "*.h" "*.cpp")
 file(GLOB CORE "Core/*.h" "Core/*.cpp")
 file(GLOB MATH "Math/*.h" "Math/*.cpp")
 file(GLOB PLATFORM "Platform/*.h" "Platform/*.cpp")
-file(GLOB PLATFORM_SDL2_WRAPPER "Platform/SDL2Wrapper/*.h" "Platform/SDL2Wrapper/*.cpp")
+file(GLOB PLATFORM_SDL2_WRAPPER "Platform/SDL2/*.h" "Platform/SDL2/*.cpp")
 file(GLOB SCENE "Scene/*.h" "Scene/*.cpp")
 file(GLOB COMPONENT "Scene/Component/*.h" "Scene/Component/*.cpp")
 file(GLOB GRAPHICS "Graphics/*.h" "Graphics/*.cpp")
@@ -18,7 +18,7 @@ source_group("" FILES ${ROOT})
 source_group("Core" FILES ${CORE})
 source_group("Math" FILES ${MATH})
 source_group("Platform" FILES ${PLATFORM})
-source_group("Platform/SDL2Wrapper" FILES ${PLATFORM_SDL2_WRAPPER})
+source_group("Platform/SDL2" FILES ${PLATFORM_SDL2_WRAPPER})
 source_group("Scene" FILES ${SCENE})
 source_group("Scene/Component" FILES ${COMPONENT})
 source_group("Graphics" FILES ${GRAPHICS})
