--- a/Tests/Sprite/CMakeLists.txt
+++ b/Tests/Sprite/CMakeLists.txt
@@ -8,3 +8,17 @@ add_executable(Sprite Sprite.cpp)
 target_include_directories(Sprite PRIVATE ${CMAKE_SOURCE_DIR})
 target_link_libraries( Sprite PRIVATE  glm::glm libmulberry SDL2::SDL2 SDL2::SDL2main spdlog::spdlog spdlog::spdlog_header_only glad::glad SDL2_ttf::SDL2_ttf)
 target_compile_definitions(Sprite PRIVATE RESOURCES_DIR="${CMAKE_SOURCE_DIR}/Tests/Assets/")
+
+if (CMAKE_SYSTEM_NAME MATCHES "Linux")
+    message(STATUS "current platform: Linux")
+    target_compile_definitions(Sprite PRIVATE PLATFORM_LINUX)
+elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
+    message(STATUS "current platform: Windows")
+    target_compile_definitions(Sprite PRIVATE PLATFORM_WINDOWS)
+elseif (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
+    message(STATUS "current platform: FreeBSD")
+    target_compile_definitions(Sprite PRIVATE PLATFORM_FREEBSD)
+else ()
+    message(STATUS "other platform: ${CMAKE_SYSTEM_NAME}")
+    target_compile_definitions(Sprite PRIVATE PLATFORM_OTHER)
+endif (CMAKE_SYSTEM_NAME MATCHES "Linux")
