add color attachment object

--- a/libmulberry/CMakeLists.txt
+++ b/libmulberry/CMakeLists.txt
@@ -3,16 +3,16 @@ if(CURRENT_PLATFORM STREQUAL "Linux")
     set(LIB_NAME mulberry)
 endif()
 
-file(GLOB ROOT "*.h" "*.cpp")
-file(GLOB CORE "Core/*.h" "Core/*.cpp")
-file(GLOB MATH "Math/*.h" "Math/*.cpp")
-file(GLOB PLATFORM "Platform/*.h" "Platform/*.cpp")
-file(GLOB PLATFORM_SDL2_WRAPPER "Platform/SDL2/*.h" "Platform/SDL2/*.cpp")
-file(GLOB SCENE "Scene/*.h" "Scene/*.cpp")
-file(GLOB COMPONENT "Scene/Component/*.h" "Scene/Component/*.cpp")
-file(GLOB GRAPHICS "Graphics/*.h" "Graphics/*.cpp")
-file(GLOB RHI "Graphics/RHI/*.h" "Graphics/RHI/*.cpp")
-file(GLOB VK "Graphics/RHI/VK/*.h" "Graphics/RHI/VK/*.cpp")
+file(GLOB ROOT "*.h" "*.cpp" "*.inl")
+file(GLOB CORE "Core/*.h" "Core/*.cpp" "Core/*.inl")
+file(GLOB MATH "Math/*.h" "Math/*.cpp" "Math/*.inl")
+file(GLOB PLATFORM "Platform/*.h" "Platform/*.cpp" "Platform/*.inl")
+file(GLOB PLATFORM_SDL2_WRAPPER "Platform/SDL2/*.h" "Platform/SDL2/*.cpp" "Platform/SDL2/*.inl")
+file(GLOB SCENE "Scene/*.h" "Scene/*.cpp" "Scene/*.inl")
+file(GLOB COMPONENT "Scene/Component/*.h" "Scene/Component/*.cpp" "Scene/Component/*.inl")
+file(GLOB GRAPHICS "Graphics/*.h" "Graphics/*.cpp" "Graphics/*.inl")
+file(GLOB RHI "Graphics/RHI/*.h" "Graphics/RHI/*.cpp" "Graphics/RHI/*.inl")
+file(GLOB VK "Graphics/RHI/VK/*.h" "Graphics/RHI/VK/*.cpp" "Graphics/RHI/VK/*.inl")
 
 source_group("" FILES ${ROOT})
 source_group("Core" FILES ${CORE})
